--- a/style.css
+++ b/style.css
@@ -23,12 +23,11 @@ body {
   color: #ffeb3b;
   font-weight: 600;
   font-size: 16em;
-  -webkit-box-reflect: below -120px linear-gradient(transparant, #0008);
+  -webkit-box-reflect: below -120px linear-gradient(transparent, #0008);
   text-shadow: 0 0 10px #ff8c3b, 0 0 40px #ff8c3b, 0 0 80px #ff8c3b,
     0 0 160px #ff8c3b, 0 0 240px #ff8c3b;
 }
-svg
-{
-width: 0;
-height: 0;
+svg {
+  width: 0;
+  height: 0;
 }
